# omega.nvim

./: .gitignore  README.md  doc.lua  test.lua  xmake.lua
.github/workflows/: doc.yml  test.yml
lua/: omega-rs.lua
lua/omega/: async.lua  async.test.lua  await.lua  calc_text_edits.lua  channel.lua  channel.test.lua  def.lua  diff_text.lua  dofile.lua  exist.lua  exist.test.lua  exist_in_file.lua  exist_in_file.test.lua  get_chars.lua  get_human_readable_duration.lua  get_line_ending.lua  get_offset_encoding.lua  get_selected_area.lua  get_selection.lua  get_timestamp.lua  init.lua  is_dir.lua  is_dir.test.lua  list_find.lua  patch_buffer.lua  root_pattern.lua  root_pattern.test.lua  spawn.lua  to_normal_mode.lua
lua/omega-rs/: cli.lua  module.lua
omega-rs/: Cargo.toml  build.lua
omega-rs/src/: diff.rs  lib.rs  time.rs  utf.rs
omega-rs/tests/diff/: new.md  old.md
rs/: Cargo.toml
rs/cli/: Cargo.toml
rs/cli/src/: cli.rs  main.rs
rs/module/: Cargo.toml
rs/module/src/: lib.rs  time.rs  utf.rs
